k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: locamaq
  namespace: locamaq
  labels:
    app: locamaq
spec:
  type: ClusterIP
  selector:
    app: locamaq
  ports:
    - name: http
      port: 80
      targetPort: 8000
      protocol: TCP
