k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: locamaq
  namespace: locamaq
  labels:
    app: locamaq
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - locamaq.seudominio.com
      secretName: locamaq-tls
  rules:
    - host: locamaq.seudominio.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: locamaq
                port:
                  number: 80
